Plots seperately in main doc to debug. Added Ts plot

--- a/stellenbosch_ee_report.tex
+++ b/stellenbosch_ee_report.tex
@@ -165,7 +165,17 @@
 % Contents
 \input{introduction/introduction.tex}
 \input{modelling/modelling.tex}
-\input{system_id/system_id.tex}
+% \input{system_id/system_id.tex}
+
+\input{system_id/plots/MAE_vs_Ts.tex}
+\input{system_id/plots/MAE_diff.tex}
+\input{system_id/plots/MAE_vs_q.tex}
+\input{system_id/plots/MAE_vs_train_Simulink_angular_rate.tex}
+\input{system_id/plots/noise_vs_no_noise.tex}
+\input{system_id/plots/havok_vs_dmd_noise.tex}
+\input{system_id/plots/singular_values.tex}
+
+% \input{system_id/system_id.tex}
 \input{conclusion/conclusion.tex}
 
 % Bibliography
