--- a/system_id/plots/MAE_diff.tex
+++ b/system_id/plots/MAE_diff.tex
@@ -1,13 +1,13 @@
-\begin{figure}[H]
+\begin{figure}[h]
     \centering
     \begin{tikzpicture}
         \begin{axis}[            
             xlabel = Length of training data,
-            ylabel = MAE,
+            ylabel = MAE of time derivative of predictions,
             x unit = \si{\second},
             % y unit = \si{\second},
-            xmin = 0,     xmax = 250,
-            ymin = 0.015, ymax = 0.04,
+            xmin = 0,     xmax = 120,
+            ymin = 0.004,  ymax = 0.016,
             grid = major,
             legend cell align = left,
             legend pos = north east,
@@ -24,17 +24,21 @@
                 Dark2\nextlist
             }
         ]
-        
-        \addplot+[mark=none, style=solid, ultra thick] table[x=T_train, y=MAE_mean, col sep=comma] {system_id/csv/dmd_MAE_vs_Ntrain_single_pend_mp0.2_l0.5.mat.csv};
+
+        \addplot+[mark = none, style = solid, ultra thick] 
+        table[x = T_train, y = MAE_mean, col sep = comma] 
+        {system_id/csv/MAE_vs_Ntrain_SITL_x_vel_noise_longer_times_MAEdiff.csv_dmd_angle.csv};
         \addlegendentry{DMD}
         
-        \addplot+[mark=none, style=solid, ultra thick] table[x=T_train, y=MAE_mean, col sep=comma] {system_id/csv/havok_MAE_vs_Ntrain_single_pend_mp0.2_l0.5.mat.csv};
+        \addplot+[mark = none, style = solid, ultra thick] 
+        table[x = T_train, y = MAE_mean, col sep = comma] 
+        {system_id/csv/MAE_vs_Ntrain_SITL_x_vel_noise_longer_times_MAEdiff.csv_havok_angle.csv};
         \addlegendentry{HAVOK}
 
         \end{axis}
     \end{tikzpicture} 
     
-    \caption{Prediction MAE of system identification models for different lengths of training data with 
-    $m =$~\SI{0.2}{\kilo\gram}, $l =$~\SI{0.5}{\meter}, $T_s =$~\SI{0.03}{\second}.}
-    \label{fig:Simulink_MAE_vs_train}
+    \caption{DMD and HAVOK error of time derivative of predictions for different lengths of noisy training data
+    ($m =$~\SI{0.2}{\kilo\gram}, $l =$~\SI{0.5}{\meter}, $T_s =$~\SI{0.03}{\second}).}
+    % \label{fig:havok_vs_dmd_noise}
 \end{figure}
