--- a/system_id/plots/MAE_vs_Ts.tex
+++ b/system_id/plots/MAE_vs_Ts.tex
@@ -2,12 +2,12 @@
     \centering
     \begin{tikzpicture}
         \begin{axis}[            
-            xlabel = Length of training data,
+            xlabel = Ts,
             ylabel = MAE,
-            x unit = \si{\second},
+            % x unit = \si{\second},
             % y unit = \si{\second},
-            xmin = 0,     xmax = 120,
-            ymin = 0.08,  ymax = 0.12,
+            xmin = 0,     xmax = 0.07,
+            ymin = 0.085,  ymax = 0.125,
             grid = major,
             legend cell align = left,
             legend pos = north east,
@@ -26,19 +26,19 @@
         ]
 
         \addplot+[mark = none, style = solid, ultra thick] 
-        table[x = T_train, y = MAE_mean, col sep = comma] 
-        {system_id/csv/MAE_vs_Ntrain_SITL_x_vel_noise_longer_times.csv_dmd_angle.csv};
+        table[x = Ts, y = MAE_mean, col sep = comma] 
+        {system_id/csv/MAE_vs_Ts_SITL_x_vel_noise_longer_times_Ts.csv_dmd_angle.csv};
         \addlegendentry{DMD}
-
+        
         \addplot+[mark = none, style = solid, ultra thick] 
-        table[x = T_train, y = MAE_mean, col sep = comma] 
-        {system_id/csv/MAE_vs_Ntrain_SITL_x_vel_noise_longer_times.csv_havok_angle.csv};
+        table[x = Ts, y = MAE_mean, col sep = comma] 
+        {system_id/csv/MAE_vs_Ts_SITL_x_vel_noise_longer_times_Ts.csv_havok_angle.csv};
         \addlegendentry{HAVOK}
 
         \end{axis}
     \end{tikzpicture} 
     
-    \caption{DMD and HAVOK prediction error for different lengths of noisy training data
-    ($m =$~\SI{0.2}{\kilo\gram}, $l =$~\SI{0.5}{\meter}, $T_s =$~\SI{0.03}{\second}).}
+    \caption{DMD and HAVOK predictions error for different lengths of noisy training data
+    ($m =$~\SI{0.2}{\kilo\gram}, $l =$~\SI{0.5}{\meter}, $T_s =$~\SI{0.03}{\second}, $T_{train} =$~\SI{60}{\second}.)}
     % \label{fig:havok_vs_dmd_noise}
 \end{figure}
